# image_processor

./: CMakeLists.txt  bmp.cpp  bmp.h  image.cpp  image.h  image_processor.cpp  io.h  parser.cpp  parser.h  processor.cpp  processor.h  producers.cpp  producers.h  readme.md
exceptions/: file_read_exceptions.cpp  file_read_exceptions.h  filter_exceptions.cpp  filter_exceptions.h
filters/: base.cpp  base.h  crop.cpp  crop.h  crystal.cpp  crystal.h  edge_detection.cpp  edge_detection.h  gauss.cpp  gauss.h  grayscale.cpp  grayscale.h  negative.cpp  sharpening.cpp  sharpening.h
